Fix search filter UI on mobile

--- a/less/mapmenu.less
+++ b/less/mapmenu.less
@@ -50,29 +50,7 @@
 	}
 
 	.totals {
-		position: relative;
-		border-width: 0;
-		height: 60px;
-		left: 20px;
-		letter-spacing: normal;
-		line-height: normal;
-		margin-bottom: 0;
-		text-decoration: none;
-		color: white;
-		cursor: pointer;
-		display: flex;
-		opacity: 0;
-
-		&.visible {
-			opacity: 1;
-		}
-
-		span {
-			padding-right: 5px;
-		}
-
 		.search-filter {
-			margin-bottom: 1rem;
 			display: inline-flex;
 			flex-shrink: 0;
 			outline: 0;
